--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
+    "axios": "^0.25.0",
     "expo": "~44.0.0",
+    "expo-cli": "^5.1.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
